ProdIND/ProdPrograms/force-app/main/default/objects/LoanVariations__c/LoanVariations__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Loan Variations</label>
</CustomObject>