ProdIND/ProdPrograms/force-app/main/default/objects/LoanVariations__c/fields/lowerLimitCsdCase__c.field-meta.xml
<CustomField>
    <fullName>lowerLimitCsdCase__c</fullName>
    <defaultValue>35</defaultValue>
    <label>lowerLimitCsdCase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>