ProdIND/ProdPrograms/force-app/main/default/objects/LoanVariations__c/fields/lowerLimitExShowroom__c.field-meta.xml
<CustomField>
    <fullName>lowerLimitExShowroom__c</fullName>
    <defaultValue>5</defaultValue>
    <label>lowerLimitExShowroom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>